clusters/local/voting-app-application.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-ui
  namespace: dev
spec:
  type: NodePort
  selector:
    app: vote
  ports:
    - name: http
      port: 8085
      targetPort: 80
      nodePort: 30085
